feat(service): refactor PaymentCustomerService to improve payment processing and add DTO support